social buttons overflow fixed

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,6 +33,8 @@ html, body {
 
   /* Flex to center content */
   display: flex;
+  flex-direction: column;  
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -45,6 +47,8 @@ html, body {
   gap: 1rem;                   /* spacing between items */
   text-align: center;
   padding: 1rem 2rem;
+  z-index: 2;
+  margin-bottom: 5px; 
 }
 
 .hero-overlay {
@@ -398,7 +402,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   gap: 16px;
   margin-top: 24px;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .social-btn {
@@ -523,6 +527,9 @@ h1, h2, h3, h4, h5, h6 {
 /* Socials overlay */
 .hero-socials {
   position: absolute;
+  justify-content: center;
+  flex-wrap: nowrap; 
+
   left: 50%;
   bottom: 10%; /* ← move up/down (20% from bottom) */
   margin-top: 15vh; /* 15% of viewport height between CTA and socials */
@@ -532,5 +539,6 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column;
   gap: 18px;
+  z-index: 2;
   align-items: center;
 }
